--- a/ChengYuDaHuiGame/res/values/strings.xml
+++ b/ChengYuDaHuiGame/res/values/strings.xml
@@ -24,5 +24,9 @@
     <string name="local_mode">单机模式</string>
     <string name="internet_mode">聚会模式</string>
     <string name="count_down_sample">01:01</string>
+    <string name="search_chengyu">输入搜索成语</string>
+    <string name="start_game">开始游戏</string>
+    <string name="game_right">正确</string>
+    <string name="game_next">换词</string>
 
 </resources>
