--- a/ChengYuDaHuiGame/res/values/strings.xml
+++ b/ChengYuDaHuiGame/res/values/strings.xml
@@ -29,7 +29,12 @@
     <string name="game_right">正确</string>
     <string name="game_next">换词</string>
     <string name="paint_clean">清除</string>
-	<string name="speak_time_setting">时间设定</string>
-	<string name="setting_time">请输入时间</string>
-	<string name="setting_time_unit">秒</string>
+    <string name="speak_time_setting">时间设定</string>
+    <string name="setting_time">请输入时间</string>
+    <string name="setting_time_unit">秒</string>
+    <string name="game_loading">Loading....</string>
+    <string name="referee">裁判员</string>
+    <string name="actor">表演者</string>
+    <string name="observer">观察者</string>
+
 </resources>
