--- a/ChengYuDaHuiGame/res/values/strings.xml
+++ b/ChengYuDaHuiGame/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="install">安装</string>
     <string name="update">更新</string>
     <string name="open">打开</string>
+    <string name="cancel">取消</string>
     <string name="show_result">显示结果</string>
     <string name="pre_download">准备下载</string>
     <string name="speak_game_time">游戏时间</string>
