--- a/ChengYuDaHuiGame/res/values/strings.xml
+++ b/ChengYuDaHuiGame/res/values/strings.xml
@@ -15,6 +15,21 @@
     <string name="wifi_server_number_wifi_name_default">Wi-Fi连接</string>
     <string name="wifi_server_number">%1$s (%2$d)</string>
     <string name="ap_server_number">热点连接  (%d)</string>
+    <string name="http_share_open_warning_dialog_title">零流量邀请</string>
+    <string name="http_share_open_warning_dialog_message">使用WiFi邀请将断开当前局域网，是否继续？</string>
+    <string name="http_share_title">零流量邀请</string>
+    <string name="http_share_first_step">第一步:</string>
+    <string name="http_share_second_step">第二步:</string>
+    <string name="http_share_first_step_tip">请好友打开手机WiFi，连接无线网络到：\n%s</string>
+    <string name="http_share_second_step_tip1">打开浏览器，输入网址：\n%s</string>
+    <string name="http_share_second_step_tip2">或者扫描二维码直接下载</string>
+    <string name="invite_http_opening">正在开启WiFi邀请。。。</string>
+    <string name="invite_bluetooth">蓝牙邀请</string>
+    <string name="invite_bluetooth_first_step">第一步:</string>
+    <string name="invite_bluetooth_second_step">第二步:</string>
+    <string name="invite_bluetooth_send">搜索-发送</string>
+    <string name="invite_bluetooth_first_step_tip">请身边好友打开蓝牙,保持对附近的蓝牙设备可见（如图所示）</string>
+    <string name="invite_bluetooth_second_step_tip">好友完成第一步后,请点击搜索-发送按钮，就可以搜索TA的手机并把聚游发送过去</string>
     <string name="study_every_day">天天学成语</string>
     <string name="game_by_speak">你说我来猜</string>
     <string name="game_by_paint">你画我来猜</string>
